--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   audioplayers: ^0.15.1
+  flutter_phoenix: ^0.1.0
+  numberpicker: ^1.2.0
+  path_provider: ^1.6.9
+  file_picker: ^1.10.0
+
 
 dev_dependencies:
   flutter_test:
